# wasoc-notebook

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: blob-upload.yml  ci.yml  codeql-analysis.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
notebooks/: generate-reports.ipynb  lists  markdown  report-exposedservices.ipynb  report-sentinel.ipynb  siemhealth.ipynb
notebooks/example-markdown/: report-sentinel.md
notebooks/kql/: alertdetail.kql  deviceswithoutasr.kql  emaildelivery.kql  externaldownloads.kql  incidentdetail.kql  incidentmitre.kql  localadminlogons.kql  operatingsystems.kql  signins.kql  triagestats.kql  usage (1).kql  usage.kql
notebooks/kql/siemhealth/: adminapps.kql  alertdetail.kql  emaildelivery.kql  externaldownloads.kql  guestdownloads.kql  identitylogonevents.kql  incidentdetail.kql  legacyauth.kql  localadminlogons.kql  rdpusage.kql  signins.kql  usage.kql
src/azure_notebook_reporting/: __init__.py  azure_notebook_reporting.py
tests/: test_azure_notebook_reporting.py
