[tool.poetry]
name = "azure_notebook_reporting"
version = "0.1.3"
description = "A package to easily pull in azure cli and generate reports using seaborn and pandas."
authors = ["Adon Metcalfe"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"
esparto = "^4.1.0"
weasyprint = "^56.1"
azure-identity = "^1.11.0"
cloudpathlib = {extras = ["azure"], version = "^0.10.0"}
pytest-cov = "^3.0.0"
azure-cli = "^2.40.0"
setuptools = "^65.3.0"
cacheout = "^0.14.1"
pip = "^22.2.2"
pathvalidate = "^2.5.2"
seaborn = "^0.12.0"
jupyterlab = "^3.4.7"

[tool.poetry.dev-dependencies]

[tool.black]
line-length = 160

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
